--- a/blog/package.json
+++ b/blog/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "iview": "^3.1.5",
+    "mavon-editor": "^2.6.17",
+    "showdown": "^1.9.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
